<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="game_spectator">You\'re a spectator. Just watch!</string>
    <string name="game_youJudge">You\'re the Card Czar! Waiting for other players…</string>
    <string name="game_selectWinningCard">Select the winning card(s):</string>
    <string name="game_youRoundWinner_long">You won this round! A new round will begin shortly…</string>
    <string name="game_youRoundWinner_short">You won this round!</string>
    <string name="game_youGameHost">You\'re the game host! Start the game when you\'re ready.</string>
    <string name="game_waitingForRoundToEnd">Waiting for the current round to end…</string>
    <string name="game_waitingForStart">Waiting for the game to start…</string>
    <string name="game_isJudging">%s is judging…</string>
    <string name="game_waitingForPlayers">Waiting for other players…</string>
    <string name="game_playerSkipped">%s has been skipped.</string>
    <string name="game_pickCards">Select %d card(s) to play. Your hand:</string>
    <string name="game_judgeSkipped">Judge %s has been skipped.</string>
    <string name="game_notYourTurn">Not your turn! If you think that\'s wrong, refresh from the menu.</string>
    <string name="game_playerKickedIdle">%s has been kicked for being idle.</string>
    <string name="game_judgeLeft_long">Judge %s left. A new round will begin shortly.</string>
    <string name="game_judgeLeft_short">Judge %s left.</string>
    <string name="game_roundWinner_long">%s won this round! A new round will begin shortly…</string>
    <string name="game_roundWinner_short">%s won this round!</string>
    <string name="game_gameWinner_long">%s won the game! Waiting for the host to start a new game…</string>
    <string name="game_gameWinner_short">%s won the game!</string>
    <string name="game_youGameWinner_long">You won the game! Waiting for the host to start a new game…</string>
    <string name="game_youGameWinner_short">You won the game!</string>
    <string name="tutorial_firstTitle">Welcome to Pretend You\'re Xyzzy</string>
    <string name="tutorial_firstDesc">Pretend You\'re Xyzzy is an online cards game based on Cards Against Humanity. In this tutorial I\'ll explain you how to play.</string>
    <string name="tutorial_secondTitle">The rules</string>
    <string name="tutorial_secondDesc">Every turn a Black Card is played by the Card Czar, everyone else answers the question or completes the fill-in-the-blank phrase. Once everyone played, the Card Czar chooses the funniest play, whoever submitted it gets one point. In the next turn a new player becomes the Card Czar and everyone is drawn back up with ten cards.</string>
    <string name="tutorial_thirdTitle">Custom decks</string>
    <string name="tutorial_thirdDesc">This game supports custom decks (on updated servers): you can create custom decks from the app and add them to your own game.</string>
    <string name="tutorial_fourthTitle">Overloaded</string>
    <string name="tutorial_fourthDesc">Overloaded is a game expansion that enables cool features like <![CDATA[<b>E2EE chat</b>]]>, <![CDATA[<b>user profiles</b>]]>, custom decks and starred cards <![CDATA[<b>synchronization</b>]]> and more. You can also <![CDATA[<b>share</b>]]> your decks with other players.</string>
    <string name="tutorial_fifthTitle">More features</string>
    <string name="tutorial_fifthDesc">More features are available in this app, you\'ll learn them as you go. Good game!</string>
    <string name="tutorial_chooseNickname">Choose a nickname to play, this won\'t be permanent.</string>
    <string name="tutorial_changeServer">There are multiple servers available, choose the one you prefer.</string>
    <string name="tutorial_joinTheServer">Get ready to play and join the lobby, there you\'ll be pleased with many games.</string>
    <string name="tutorial_gameStatus">This indicates whether the game has been started or not. You can join it anyway, as long as there is room for you.</string>
    <string name="tutorial_gameLocked">A game can be locked with a password to restrict access, that is set by the game host when creating the game.</string>
    <string name="tutorial_spectateGame">Spectators can only see what\'s happening and cannot play, but they can write on the chat.</string>
    <string name="tutorial_joinGame">Join the game to start playing immediately.</string>
    <string name="tutorial_createGame">You can create your own game and define your own settings.</string>
    <string name="tutorial_setupGame">Here you can customize your game options. Don\'t forget you can also add custom decks from the menu up here (if supported on the server).</string>
    <string name="tutorial_startGame">Once you\'re done, start the game. To do that you must have at least 3 players and a given number of cards.</string>
    <string name="tutorial_chooseIdCode">Enter or generate an identification code to make it difficult for someone to impersonate you.</string>
    <string name="tutorial_blackCard">This is a block card: you have to complete the sentence with the white cards below.</string>
    <string name="tutorial_whiteCard">Play one or multiple white cards to complete the sentence. If you don\'t know the meaning of a word, use the definition function in the upper right menu.</string>
    <string name="tutorial_playCard">To play a card just tap it: a confirmation dialog will appear.</string>
    <string name="tutorial_player">Once a player reaches the score goal, it wins. You can tap on players to reveal additional information.</string>
    <string name="tutorial_overloaded">Overloaded enables many cool features not present in the standard game experience. It\'s a monthly subscription.</string>
    <string name="tutorial_addCustomDeck">Here you can create your own custom decks (with text and images) or import and recover old Cardcast decks.</string>
    <string name="app_name">Pretend You\'re Xyzzy</string>
    <string name="nickname">Nickname</string>
    <string name="submit">Submit</string>
    <string name="changeServer">Change server</string>
    <string name="reservedNickname">Nickname is reserved!</string>
    <string name="invalidNickname">Nickname must contain only upper and lower case letters, numbers, or underscores, must be 3 to 30 characters long, and must not start with a number.</string>
    <string name="alreadyUsedNickname">Nickname is already in use.</string>
    <string name="tooManyUsers">There are too many users connected. Either join another server, or wait for a user to disconnect.</string>
    <string name="failedLoading">Failed loading!</string>
    <string name="globalChat">Global chat</string>
    <string name="games">Games</string>
    <string name="gameChat">Game chat</string>
    <string name="failedLoading_reason">Failed loading: %s</string>
    <string name="players">Players: %1$d / %2$d</string>
    <string name="spectators">Spectators: %1$d / %2$d</string>
    <string name="noMessages">There are no messages.</string>
    <string name="failedSendMessage">Failed sending the message!</string>
    <string name="logout">Logout</string>
    <string name="spectate">Spectate</string>
    <string name="join">Join</string>
    <string name="goal">Goal: %d</string>
    <string name="playersLabel">Players</string>
    <string name="gamePassword">Enter game password</string>
    <string name="failedJoiningGame">Failed joining the game!</string>
    <string name="wrongGamePassword">Wrong password for this game!</string>
    <string name="gameFull">The game is full! Try later.</string>
    <string name="failedSpectating">Failed spectating the game!</string>
    <string name="ongoingGame">Ongoing game</string>
    <string name="gameLabel">Game</string>
    <string name="leaveGame">Leave game</string>
    <string name="failedLeaving">Failed leaving the game!</string>
    <string name="search">Search</string>
    <string name="score"><![CDATA[<b>Score:</b>]]> %d</string>
    <string name="numPick"><![CDATA[<b>Pick</b>]]> %d</string>
    <string name="numDraw"><![CDATA[<b>Draw</b>]]> %d</string>
    <string name="gameOptions">Game options</string>
    <string name="scoreLimit"><![CDATA[<b>Score limit:</b>]]> %d</string>
    <string name="playerLimit"><![CDATA[<b>Players limit:</b>]]> %d</string>
    <string name="timerMultiplier">Timer multiplier: %s</string>
    <string name="spectatorLimit">Spectators limit: %d</string>
    <string name="blankCards">Blank cards: %d</string>
    <string name="cardSets">Card sets: %s</string>
    <string name="spectatorsLabel">Spectators</string>
    <string name="keepScreenOn">Keep screen on</string>
    <string name="starredCards">Starred cards</string>
    <string name="selectAStarredCard">Select a card from the list above.</string>
    <string name="noStarredCards">Save the cards you love, have a good laugh reading them.</string>
    <string name="hurryUp">Hurry up!!</string>
    <string name="setBlankCardText">Set blank card text</string>
    <string name="failedCreatingGame">Failed creating a new game!</string>
    <string name="failedStartGame">Failed starting the game!</string>
    <string name="blackCards">Black cards</string>
    <string name="whiteCards">White cards</string>
    <string name="required">Required</string>
    <string name="provided">Provided</string>
    <string name="cannotStartGame">Cannot start the game</string>
    <string name="gameStarted">Game started!</string>
    <string name="share">Share</string>
    <string name="apply">Apply</string>
    <string name="failedChangingOptions">Failed changing game options!</string>
    <string name="optionsChanged">Game options changed.</string>
    <string name="editGameOptions">Edit game options</string>
    <string name="password"><![CDATA[<b>Password:</b>]]> %s</string>
    <string name="scoreLimitLabel">Score limit</string>
    <string name="passwordLabel">Password</string>
    <string name="blankCardsLabel">Blank cards</string>
    <string name="timerMultiplierLabel">Timer multiplier</string>
    <string name="spectatorsLimitLabel">Spectators limit</string>
    <string name="playersLimitLabel">Players limit</string>
    <string name="invalidTimerMultiplier">Invalid timer multiplier!</string>
    <string name="invalidNumber">Invalid number!</string>
    <string name="outOfRange">The value is out of range! Min: %1$d. Max: %2$d</string>
    <string name="cardSetsLabel">Card sets</string>
    <string name="add">Add</string>
    <string name="notEnoughPlayers">Not enough players!</string>
    <string name="cannotStartGame_solution">Please meet the requirements adding card sets to the game.</string>
    <string name="name">Name</string>
    <string name="preferences">Preferences</string>
    <string name="logs">Logs</string>
    <string name="loading">Loading…</string>
    <string name="leaveGame_confirm">Do you really want to leave the game?</string>
    <string name="cancel">Cancel</string>
    <string name="metrics">Metrics</string>
    <string name="showGameMetrics">Show game metrics</string>
    <string name="showLastRound">Show last round</string>
    <string name="definition">Definition</string>
    <string name="customDecks">Custom decks</string>
    <string name="description">Description</string>
    <string name="watermark">Watermark</string>
    <string name="createCustomCardInfo_image">White cards can contain images as responses to black cards: paste the link here or upload an image. Uploaded images will also be optimized.</string>
    <string name="username">Username</string>
    <string name="askOverloadedUsername_title">Choose your Overloaded username</string>
    <string name="askOverloadedUsername_desc">Please choose a username for your Overloaded account. You can still use a different username for PYX.</string>
    <string name="imageLink">Image link</string>
    <string name="uploadImage">Upload image</string>
</resources>