<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource">
    <item
        android:id="@+id/ongoingGame_leave"
        android:icon="@drawable/baseline_clear_24"
        android:orderInCategory="0"
        android:title="@string/leaveGame"
        app:showAsAction="always" />

    <item
        android:id="@+id/ongoingGame_options"
        android:icon="@drawable/outline_info_24"
        android:orderInCategory="1"
        android:title="@string/gameOptions"
        app:showAsAction="always" />

    <item
        android:id="@+id/ongoingGame_players"
        android:icon="@drawable/baseline_people_24"
        android:orderInCategory="1"
        android:title="@string/playersLabel"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ongoingGame_spectators"
        android:icon="@drawable/baseline_remove_red_eye_24"
        android:orderInCategory="2"
        android:title="@string/spectatorsLabel"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ongoingGame_share"
        android:icon="@drawable/baseline_share_24"
        android:orderInCategory="1"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ongoingGame_gameMetrics"
        android:orderInCategory="1"
        android:title="@string/showGameMetrics"
        app:showAsAction="never" />

    <item
        android:id="@+id/ongoingGame_lastRound"
        android:orderInCategory="1"
        android:title="@string/showLastRound"
        app:showAsAction="never" />

    <item
        android:id="@+id/ongoingGame_definition"
        android:orderInCategory="1"
        android:title="@string/definition"
        app:showAsAction="never" />

    <item
        android:id="@+id/ongoingGame_cardcast"
        android:icon="@drawable/baseline_cast_24"
        android:title="@string/cardcast"
        app:showAsAction="ifRoom" />
</menu>