<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <org.apmem.tools.layouts.FlowLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:drawableStart="@drawable/baseline_bookmarks_24"
            android:drawablePadding="2dp"
            android:text="@string/customDecks" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:drawableStart="@drawable/baseline_edit_24"
            android:drawablePadding="2dp"
            android:text="@string/blankCardsLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="2dp"
            android:text="@string/metrics" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:drawableStart="@drawable/baseline_chat_24"
            android:drawablePadding="2dp"
            android:text="@string/globalChat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:drawableStart="@drawable/baseline_chat_bubble_outline_24"
            android:drawablePadding="2dp"
            android:text="@string/gameChat" />
    </org.apmem.tools.layouts.FlowLayout>

    <com.gianlu.commonutils.misc.RecyclerMessageView
        android:id="@+id/manageServers_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>