<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4D000000"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/bg_card_6"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/changeServer"
            android:textAppearance="@style/TextAppearance.SemiBold"
            android:textSize="22sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/changeServerDialog_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <org.apmem.tools.layouts.FlowLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="4dp"
                android:drawablePadding="2dp"
                android:text="@string/customDecks"
                app:drawableStartCompat="@drawable/baseline_bookmarks_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="4dp"
                android:drawablePadding="2dp"
                android:text="@string/blankCardsLabel"
                app:drawableStartCompat="@drawable/baseline_edit_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="4dp"
                android:drawablePadding="2dp"
                android:text="@string/metrics"
                app:drawableStartCompat="@drawable/baseline_person_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="4dp"
                android:drawablePadding="2dp"
                android:text="@string/globalChat"
                app:drawableStartCompat="@drawable/baseline_chat_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:drawablePadding="2dp"
                android:text="@string/gameChat"
                app:drawableStartCompat="@drawable/baseline_chat_bubble_outline_24" />
        </org.apmem.tools.layouts.FlowLayout>

        <Button
            android:id="@+id/changeServerDialog_cancel"
            style="@style/ButtonBigStyle.Outlined"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:padding="0dp"
            android:text="@string/cancel" />
    </LinearLayout>
</FrameLayout>