<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/askOverloadedUsername_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/askOverloadedUsername_desc"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/askUsernameDialog_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>