<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/askImageUrl_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:justificationMode="inter_word"
        android:text="@string/createCustomCardInfo_image"
        tools:targetApi="o" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/askImageUrl_link"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/imageLink"
        app:endIconCheckable="false"
        app:endIconContentDescription="@string/uploadImage"
        app:endIconDrawable="@drawable/baseline_publish_24"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>